tests/NormalTests/paczka1/fuzzy1/16590956.err
Error in line 18: YbdOGG2XYrQ A786 50,2
Error in line 26: oBtrEBoJVp A786 19,5
Error in line 29: 0qVhiv6G1 S25 95,5
Error in line 35: 0qVhiv6G1 S917 66,4
Error in line 31: oYd74HD5NIk A786 7,3
